; ModuleID = '/home/carl/AnghaBench/xhyve/src/extr_pci_emul.c_pci_write_dsdt.c'
source_filename = "/home/carl/AnghaBench/xhyve/src/extr_pci_emul.c_pci_write_dsdt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"Name (PICM, 0x00)\00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"Method (_PIC, 1, NotSerialized)\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"{\00", align 1
@.str.3 = private unnamed_addr constant [21 x i8] c"  Store (Arg0, PICM)\00", align 1
@.str.4 = private unnamed_addr constant [2 x i8] c"}\00", align 1
@.str.5 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.6 = private unnamed_addr constant [12 x i8] c"Scope (_SB)\00", align 1
@MAXBUSES = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pci_write_dsdt() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @dsdt_indent(i32 1)
  %3 = call i32 @dsdt_line(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @dsdt_line(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0))
  %5 = call i32 @dsdt_line(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  %6 = call i32 @dsdt_line(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.3, i64 0, i64 0))
  %7 = call i32 @dsdt_line(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0))
  %8 = call i32 @dsdt_line(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.5, i64 0, i64 0))
  %9 = call i32 @dsdt_line(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.6, i64 0, i64 0))
  %10 = call i32 @dsdt_line(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  store i32 0, i32* %1, align 4
  br label %11

11:                                               ; preds = %18, %0
  %12 = load i32, i32* %1, align 4
  %13 = load i32, i32* @MAXBUSES, align 4
  %14 = icmp slt i32 %12, %13
  br i1 %14, label %15, label %21

15:                                               ; preds = %11
  %16 = load i32, i32* %1, align 4
  %17 = call i32 @pci_bus_write_dsdt(i32 %16)
  br label %18

18:                                               ; preds = %15
  %19 = load i32, i32* %1, align 4
  %20 = add nsw i32 %19, 1
  store i32 %20, i32* %1, align 4
  br label %11

21:                                               ; preds = %11
  %22 = call i32 @dsdt_line(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.4, i64 0, i64 0))
  %23 = call i32 @dsdt_unindent(i32 1)
  ret void
}

declare dso_local i32 @dsdt_indent(i32) #1

declare dso_local i32 @dsdt_line(i8*) #1

declare dso_local i32 @pci_bus_write_dsdt(i32) #1

declare dso_local i32 @dsdt_unindent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
